--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +15,14 @@
         tools:targetApi="31">
 
         <!--
+
+        <activity
+            android:name=".mvvm_repo_room_hilt.ProductMainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".mvvm_livedb_room_1.GitMainActivity"
+            android:exported="false" />
 
          <activity
             android:name=".mvvm_livedata_room.CompanyMainActivity"
@@ -32,7 +41,7 @@
             android:exported="false" />
         -->
         <activity
-            android:name=".mvvm_livedata_room.CompanyMainActivity"
+            android:name=".mvvm_repo_room_hilt.ProductMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
